@@ -491,55 +491,29 @@ int kr_straddr_subnet(void *dst, const char *addr)
 	return bit_len;
 }
 
-int kr_straddr_split(const char *addr, char *buf, size_t buflen, uint16_t *port)
+const char * kr_straddr_split(const char *addr, char *buf, uint16_t *port)
 {
-	const int base = 10;
-	long p = 0;
-	size_t addrlen = strlen(addr);
-	char *p_start = strchr(addr, '@');
-	char *p_end;
-
-	if (!p_start) {
+	assert(addr && buf && port);
+	/* Find where port number starts. */
+	const char *p_start = strchr(addr, '@');
+	if (!p_start)
 		p_start = strchr(addr, '#');
-	}
-
-	if (p_start) {
-		if (p_start[1] != '\0'){
-			p = strtol(p_start + 1, &p_end, base);
-			if (*p_end != '\0' || p <= 0 || p > UINT16_MAX) {
-				return kr_error(EINVAL);
-			}
-		}
-		addrlen = p_start - addr;
-	}
-
-	/* Check if address is valid. */
-	if (addrlen >= INET6_ADDRSTRLEN) {
-		return kr_error(EINVAL);
-	}
-
-	char str[INET6_ADDRSTRLEN];
-	struct sockaddr_storage ss;
-
-	memcpy(str, addr, addrlen); str[addrlen] = '\0';
-
-	int family = kr_straddr_family(str);
-	if (family == kr_error(EINVAL) || !inet_pton(family, str, &ss)) {
-		return kr_error(EINVAL);
-	}
-
-	/* Address and port contains valid values, return it to caller */
-	if (buf) {
-		if (addrlen >= buflen) {
-			return kr_error(ENOSPC);
-		}
-		memcpy(buf, addr, addrlen); buf[addrlen] = '\0';
-	}
-	if (port) {
-		*port = (uint16_t)p;
-	}
-
-	return kr_ok();
+	if (!p_start) /* No port specified -> no need to copy anything. */
+		return addr;
+	if (p_start[1] == '\0') /* Don't accept empty port string. */
+		return NULL;
+	/* Check the port number. */
+	char *p_end;
+	long p = strtol(p_start + 1, &p_end, 10);
+	if (*p_end != '\0' || p <= 0 || p > UINT16_MAX)
+		return NULL;
+	*port = p;
+	/* We need to copy the address. */
+	const size_t addrlen = p_start - addr;
+	if (addrlen > INET6_ADDRSTRLEN)
+		return NULL;
+	memcpy(buf, addr, addrlen); buf[addrlen] = '\0';
+	return buf;
 }
 
 int kr_straddr_join(const char *addr, uint16_t port, char *buf, size_t *buflen)
