@@ -303,16 +303,17 @@ struct sockaddr * kr_straddr_socket(const char *addr, int port);
 KR_EXPORT
 int kr_straddr_subnet(void *dst, const char *addr);
 
-/** Splits ip address specified as "addr@port" or "addr#port" into addr and port
-  * and performs validation.
-  * @note if #port part isn't present, then port will be set to 0.
-  *       buf and\or port can be set to NULL.
-  * @return kr_error(EINVAL) - addr part doesn't contains valid ip address or
-  *                            #port part is out-of-range (either < 0 either > UINT16_MAX)
-  *         kr_error(ENOSP)  - buflen is too small
-  */
+/** Splits ip address specified as "addr@port" or "addr#port" into addr and port.
+ * \param addr zero-terminated input
+ * \param buf buffer in case we need to copy the address;
+ * 		length > MIN(strlen(addr), INET6_ADDRSTRLEN + 1)
+ * \param port[out] written in case it's specified in addr
+ * \return pointer to address without port (zero-terminated string)
+ * \note Typically you follow this by kr_straddr_socket().
+ */
 KR_EXPORT
-int kr_straddr_split(const char *addr, char *buf, size_t buflen, uint16_t *port);
+const char * kr_straddr_split(const char *addr, char *buf, uint16_t *port);
+
 /** Formats ip address and port in "addr#port" format.
   * and performs validation.
   * @note Port always formatted as five-character string with leading zeros.
